Added name user in main.html

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,11 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+  Put Your name: <input ng-model="user.name" />
+  <h1>Welcome, {{user.name}}!</h1>
   <p class="lead">
     <img src="https://scontent.xx.fbcdn.net/hphotos-xft1/v/t1.0-9/10527598_874413169252968_3523357906198599550_n.jpg?oh=32fa27fdc621950bdfcca3308a330fec&oe=563E4FEE" alt="I'm kamn!"><br>
     We make best apps. But we don't know how we do it.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-click="showAlertMessage('OK :-(')">Spa da laj!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-click="showAlertMessage('OK :-(')">Spadaj, Abre!<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
